syntax="proto3";

package pb;

// we need to set on proto3 extension "--proto_path=proto",
// check extesion sessing json
import "user.proto";


option go_package="github.com/dibrito/simple-bank/pb";

message UpdateUserRequest{
    string username = 1;
    optional string full_name = 2;
    optional string email = 3;
    optional string password = 4;
}

message UpdateUserResponse{
    User user = 1;
}